--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-react": "^2.6.4",
     "expect.js": "^0.3.1",
     "isparta-instrumenter-loader": "^0.2.1",
+    "lodash": "^3.10.1",
     "mocha": "^2.2.5",
     "null-loader": "^0.1.1",
     "react-hot-loader": "^1.2.7",
